--- a/Sesion-2/index.html
+++ b/Sesion-2/index.html
@@ -3,11 +3,18 @@
 
 <head>
 	<meta charset="utf-8">
-	
-	<script src="script.js" type="text/javascript"></script>
+	<title>Ejercicio Número Par e Impar</title>
+  <script src="script.js" type="text/javascript"></script>
 </head>
 
 <body>
+  <h1 id="title">Ejercicio Números Pares e Impares</h1>
+  <div>
+    <input type="text" id="input-num" />
+    <button id="btn-agregar">Agregar</button>
+  </div>
+  <ul id="list">
+  </ul>
 
 </body>
 
