--- a/Sesion-2/js-tests/index.html
+++ b/Sesion-2/js-tests/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-  <div id="container"></div>
+  <div id="container">
+    <p id="quote"></p>
+  </div>
   <script src="script.js" type="text/javascript"></script>
 </body>
 
